# vmodel-docs

./: .buildinfo  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  TRAVEO2_STEP_BY_STEP.md  board_overview.html  genindex.html  index.html  needs.json  objects.inv  pinout.html  requirements.html  search.html  searchindex.js  test_results.html  test_spec.html
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci_cd.yml  docs.yml  hardware_flash.yml
TARGET_custom_bsp_cyt2b75cas/: bsp.mk  cybsp.c  cybsp.h  cybsp_doc.h  cybsp_hw_config.h  cybsp_types.h  props.json
TARGET_custom_bsp_cyt2b75cas/COMPONENT_CM0P/TOOLCHAIN_ARM/: linker.sct
TARGET_custom_bsp_cyt2b75cas/COMPONENT_CM0P/TOOLCHAIN_GCC_ARM/: linker.ld
TARGET_custom_bsp_cyt2b75cas/COMPONENT_CM0P/TOOLCHAIN_IAR/: linker.icf
TARGET_custom_bsp_cyt2b75cas/COMPONENT_CM4/TOOLCHAIN_ARM/: linker.sct
TARGET_custom_bsp_cyt2b75cas/COMPONENT_CM4/TOOLCHAIN_GCC_ARM/: linker.ld
_downloads/84f405aae31c7c5ca23faad8e19a00b1/: TC011_TC012_inspection.robot
_downloads/8a340b253fd9c9c52b2847fee7f13250/: TC003_TC006_functional.robot
_downloads/b8d98199aded4717e081a32b5bb9b93a/: TC007_TC010_unit.robot
_sources/: board_overview.rst.txt  index.rst.txt  test_results.rst.txt  test_spec.rst.txt
_sources/introduction/: definitions.rst.txt  overview.rst.txt  scope.rst.txt
_sources/reference/: abbreviations.rst.txt  documents.rst.txt  glossary.rst.txt
_sources/requirements/: index.rst.txt
_sources/specifications/: index.rst.txt
_sources/traceability/: requirements_coverage.rst.txt  traceability_matrix.rst.txt  validation.rst.txt  verification_status.rst.txt
_sources/traveo2/: architecture.rst.txt  board_config.rst.txt  overview.rst.txt  testing.rst.txt
_static/: custom.css  documentation_options.js
_static/test_results/: log.html  report.html
cmake/: toolchain-arm-none-eabi.cmake
docs/: conf.py  index.rst  pinout.rst  requirements.rst  test_results.rst  test_spec.rst
docs/design/: DES_001.rst
docs/implementation/: IMPL_001.rst
docs/requirements/business/: REQ_001.rst  (+1 more)
docs/validation/: VAL_001.rst  test_execution_report.rst  traceability_matrix.rst
introduction/: definitions.html  overview.html  scope.html
linker/: traveo2_1m.ld
reference/: abbreviations.html  documents.html  glossary.html
requirements/: index.html
requirements/functional/: index.html
requirements/non-functional/: index.html
scripts/: ai.py  build_traveo2.ps1  check_kitprog.ps1  example.arxml  flash_traveo2.ps1
specifications/: index.html
specifications/integration/: index.html
specifications/system/: index.html
specifications/unit/: index.html
src/: Compiler.h  Platform_Types.h  Std_Types.h  authentication_module.cpp  authentication_module.h  main.c  startup.c
t2g_cyt2b75_sw1_led/: .ninja_log  Makefile  README.md  main.c  project_info.json
tests/: .gitignore  __init__.robot  requirements.txt  test_authentication_module.cpp
tests/libraries/: OpenOcdLibrary.py  SourceInspectionLibrary.py
tests/resources/: openocd.resource  variables.resource
tests/suites/: TC001_TC002_port_init.robot  TC003_TC006_functional.robot  TC007_TC010_unit.robot
traceability/: requirements_coverage.html  traceability_matrix.html  validation.html  verification_status.html
traveo2/: architecture.html  board_config.html  overview.html  testing.html
(+32 files in other folders)
